--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-test-scan:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted  # ← use your local runner so localhost:3100 works
 
     steps:
       # 🧩 Checkout source code
@@ -44,18 +44,15 @@ jobs:
           ignore-unfixed: true
           exit-code: 0
 
-          
-
       # 🧠 Scan image with Grype
       - name: Grype vulnerability scan
         uses: anchore/scan-action@v3
         with:
           image: ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }}
           severity-cutoff: high
-          fail-build: false # set true if you want to block pipeline
+          fail-build: false
           output-format: sarif
           output-file: grype-report.sarif
-          
 
       # 💾 Upload vulnerability reports as artifacts
       - name: Upload security scan reports
@@ -72,14 +69,15 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-            # 📤 Push vulnerability logs to Loki
+
+      # 📤 Push vulnerability logs to Loki
       - name: Push Trivy and Grype reports to Loki
         if: always()  # ensures logs are sent even if a scan fails
         run: |
           echo "Sending reports to Loki..."
           for report in trivy-report.sarif grype-report.sarif; do
             if [ -f "$report" ]; then
-              curl -v -X POST ${{ secrets.LOKI_URL }}/loki/api/v1/push \
+              curl -s -X POST http://localhost:3100/loki/api/v1/push \
                 -H "Content-Type: application/json" \
                 --data-raw "{
                   \"streams\": [
@@ -96,9 +94,7 @@ jobs:
             fi
           done
 
-
       # 🚀 Push image to DockerHub (only if all scans pass)
       - name: Push Docker image
         if: success()
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }}
-
