--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,18 +71,17 @@ jobs:
 
       # 📤 Push vulnerability logs to Grafana Cloud Loki
       - name: Push scan results to Grafana Cloud
+             
         if: always()
         run: |
           echo "Sending security scan results to Grafana Cloud..."
-          
-          # Function to push data to Loki
+
           push_to_loki() {
             local tool=$1
             local file=$2
             local timestamp=$(date +%s000000000)
-            
+
             if [ -f "$file" ]; then
-              # Create summary from JSON results
               if [ "$tool" = "trivy" ]; then
                 CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity == "CRITICAL")] | length' $file)
                 HIGH_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity == "HIGH")] | length' $file)
@@ -92,38 +91,36 @@ jobs:
                 HIGH_COUNT=$(jq '.matches[]? | select(.vulnerability.severity == "High") | .vulnerability.id' $file | wc -l)
                 SUMMARY="Grype Scan: $CRITICAL_COUNT Critical, $HIGH_COUNT High vulnerabilities"
               fi
-              
+
               # Push summary to Loki
-              curl -X POST \
-                "$GRAFANA_LOKI_URL/loki/api/v1/push" \
+              curl -X POST "$GRAFANA_LOKI_URL/loki/api/v1/push" \
                 -u "$GRAFANA_USER_ID:$GRAFANA_API_KEY" \
                 -H "Content-Type: application/json" \
-                -d @- << EOF
-              {
-                "streams": [
-                  {
-                    "stream": {
-                      "job": "security-scans",
-                      "tool": "$tool",
-                      "repository": "${{ github.repository }}",
-                      "branch": "${{ github.ref }}",
-                      "commit": "${{ github.sha }}"
-                    },
-                    "values": [
-                      [ "$timestamp", "$SUMMARY" ]
-                    ]
-                  }
-                ]
-              }
-              EOF
-              
+                -d @- <<EOF
+{
+  "streams": [
+    {
+      "stream": {
+        "job": "security-scans",
+        "tool": "$tool",
+        "repository": "${{ github.repository }}",
+        "branch": "${{ github.ref_name }}",
+        "commit": "${{ github.sha }}"
+      },
+      "values": [
+        [ "$timestamp", "$SUMMARY" ]
+      ]
+    }
+  ]
+}
+EOF
+
               echo "✅ $tool results sent to Grafana Cloud"
             else
               echo "⚠️ $file not found, skipping $tool"
             fi
           }
 
-          # Push both scan results
           push_to_loki "trivy" "trivy-results.json"
           push_to_loki "grype" "grype-results.json"
 
