--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,31 +7,40 @@ on:
     branches: [ main ]
 
 env:
-  # Set these as GitHub Secrets
-  GRAFANA_LOKI_URL: https://logs-prod-us-central1.grafana.net
+  # 🌐 Grafana Cloud Loki endpoint
+  GRAFANA_LOKI_URL: https://logs-prod-012.grafana.net
+  
+  # 🔒 Secrets stored in GitHub
   GRAFANA_USER_ID: ${{ secrets.GRAFANA_USER_ID }}
   GRAFANA_API_KEY: ${{ secrets.GRAFANA_API_KEY }}
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
   build-test-scan:
-    runs-on: ubuntu-latest  # ← Changed to GitHub-hosted runner since we're using Grafana Cloud
+    runs-on: ubuntu-latest
 
     steps:
-      # 🧩 Checkout source code
+      # 🧩 Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 🐍 Set up Python for tests
+      # 🐍 Set up Python (optional - for your tests)
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
-      # 📦 Install dependencies
+      # 📦 Install dependencies (if you have requirements.txt)
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          if [ -f "requirements.txt" ]; then
+            pip install -r requirements.txt
+          else
+            echo "No requirements.txt found, skipping."
+          fi
 
-      # 🧪 Run basic tests (optional)
+      # 🧪 Run tests (optional)
       - name: Run tests
         run: pytest || echo "No tests found, skipping..."
 
@@ -60,7 +69,7 @@ jobs:
           output-format: json
           output-file: grype-results.json
 
-      # 💾 Upload vulnerability reports as artifacts
+      # 💾 Upload scan reports (for debugging or download)
       - name: Upload security scan reports
         uses: actions/upload-artifact@v4
         with:
@@ -69,9 +78,8 @@ jobs:
             trivy-results.json
             grype-results.json
 
-      # 📤 Push vulnerability logs to Grafana Cloud Loki
+      # 📤 Push summarized scan results to Grafana Cloud Loki
       - name: Push scan results to Grafana Cloud
-             
         if: always()
         run: |
           echo "Sending security scan results to Grafana Cloud..."
@@ -83,16 +91,16 @@ jobs:
 
             if [ -f "$file" ]; then
               if [ "$tool" = "trivy" ]; then
-                CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity == "CRITICAL")] | length' $file)
-                HIGH_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity == "HIGH")] | length' $file)
+                CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity == "CRITICAL")] | length' "$file")
+                HIGH_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity == "HIGH")] | length' "$file")
                 SUMMARY="Trivy Scan: $CRITICAL_COUNT Critical, $HIGH_COUNT High vulnerabilities"
               else
-                CRITICAL_COUNT=$(jq '.matches[]? | select(.vulnerability.severity == "Critical") | .vulnerability.id' $file | wc -l)
-                HIGH_COUNT=$(jq '.matches[]? | select(.vulnerability.severity == "High") | .vulnerability.id' $file | wc -l)
+                CRITICAL_COUNT=$(jq '.matches[]? | select(.vulnerability.severity == "Critical") | .vulnerability.id' "$file" | wc -l)
+                HIGH_COUNT=$(jq '.matches[]? | select(.vulnerability.severity == "High") | .vulnerability.id' "$file" | wc -l)
                 SUMMARY="Grype Scan: $CRITICAL_COUNT Critical, $HIGH_COUNT High vulnerabilities"
               fi
 
-              # Push summary to Loki
+              # Push to Loki (must NOT indent EOF)
               curl -X POST "$GRAFANA_LOKI_URL/loki/api/v1/push" \
                 -u "$GRAFANA_USER_ID:$GRAFANA_API_KEY" \
                 -H "Content-Type: application/json" \
@@ -124,14 +132,14 @@ EOF
           push_to_loki "trivy" "trivy-results.json"
           push_to_loki "grype" "grype-results.json"
 
-      # 🐋 Log in to DockerHub
+      # 🐋 Login to Docker Hub
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 🚀 Push image to DockerHub (only if all scans pass)
+      # 🚀 Push Docker image (only if successful)
       - name: Push Docker image
         if: success()
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }}
