--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,36 +13,45 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      # Hardcoded Grafana Loki credentials for testing only
       GRAFANA_LOKI_URL: https://logs-prod-012.grafana.net
-      GRAFANA_USER_ID: 1367479
-      GRAFANA_API_KEY: glc_eyJvIjoiMTU2NDMxMCIsIm4iOiJzdGFjay0xNDA5Njg1LWhsLXJlYWQtdGVzdCIsImsiOiI4ODhjRWxGNHhIMmtYNkNRNTAxRW5CRzQiLCJtIjp7InIiOiJwcm9kLWV1LXdlc3QtMiJ9fQ==
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }} 
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      GRAFANA_USER_ID: "1367479"
+      GRAFANA_API_KEY: "glc_eyJvIjoiMTU2NDMxMCIsIm4iOiJzdGFjay0xNDA5Njg1LWhsLXJlYWQtdGVzdCIsImsiOiI4ODhjRWxGNHhIMmtYNkNRNTAxRW5CRzQiLCJtIjp7InIiOiJwcm9kLWV1LXdlc3QtMiJ9fQ=="
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker (needed for Grype run)
+      - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
         run: |
-          docker build -t "${DOCKERHUB_USERNAME}/kali-test:${GITHUB_SHA}" .
+          docker build -t "mariobh/kali-test:${{ github.sha }}" .
 
-      - name: Trivy vulnerability scan
+      - name: Install Trivy
         run: |
-          docker pull ${DOCKERHUB_USERNAME}/kali-test:${GITHUB_SHA} || true
+          wget https://github.com/aquasecurity/trivy/releases/download/v0.49.1/trivy_0.49.1_Linux-64bit.tar.gz
+          tar -xzf trivy_0.49.1_Linux-64bit.tar.gz
+          sudo mv trivy /usr/local/bin/
+
+      - name: Run Trivy vulnerability scan
+        run: |
           trivy image \
             --severity CRITICAL,HIGH \
             --ignore-unfixed \
             --format json \
             --output trivy-results.json \
-            ${DOCKERHUB_USERNAME}/kali-test:${GITHUB_SHA}
-        env:
-          DOCKERHUB_USERNAME: mariobh
-          GITHUB_SHA: ${{ github.sha }}
+            "mariobh/kali-test:${{ github.sha }}"
+
+      - name: Debug - Check if Trivy file exists
+        run: |
+          ls -la
+          if [ -f "trivy-results.json" ]; then
+            echo "✅ trivy-results.json exists"
+            echo "File size: $(wc -l < trivy-results.json) lines"
+          else
+            echo "❌ trivy-results.json not found"
+          fi
 
       - name: Push scan results to Grafana Cloud
         if: always()
@@ -50,61 +59,69 @@ jobs:
           set -eo pipefail
           echo "Sending security scan results to Grafana Cloud..."
 
-          push_to_loki() {
-            local tool="$1"
-            local file="$2"
-            local timestamp
-            timestamp="$(date +%s000000000)"
-
-            if [ ! -f "$file" ]; then
-              echo "⚠️  $file not found, skipping $tool"
-              return 0
-            fi
-
-            if [ "$tool" = "trivy" ]; then
-              CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity == "CRITICAL")] | length' "$file")
-              HIGH_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity == "HIGH")] | length' "$file")
-              SUMMARY="Trivy Scan: ${CRITICAL_COUNT} Critical, ${HIGH_COUNT} High vulnerabilities"
-            else
-              CRITICAL_COUNT=$(jq '.matches[]? | select(.vulnerability.severity == "Critical") | .vulnerability.id' "$file" | wc -l)
-              HIGH_COUNT=$(jq '.matches[]? | select(.vulnerability.severity == "High") | .vulnerability.id' "$file" | wc -l)
-              SUMMARY="Grype Scan: ${CRITICAL_COUNT} Critical, ${HIGH_COUNT} High vulnerabilities"
-            fi
-
-            payload=$(jq -n \
-              --arg tool "$tool" \
-              --arg repo "${GITHUB_REPOSITORY}" \
-              --arg branch "${GITHUB_REF_NAME}" \
-              --arg commit "${GITHUB_SHA}" \
-              --arg timestamp "$timestamp" \
-              --arg summary "$SUMMARY" \
-              '{streams:[{stream:{job:"security-scans", tool:$tool, repository:$repo, branch:$branch, commit:$commit}, values:[[ $timestamp, $summary ]]}]}'
-            )
-
-            echo "Payload: $payload"
-
-            response_code=$(echo "$payload" | curl -s -o /dev/null -w "%{http_code}" \
-              -u "${GRAFANA_USER_ID}:${GRAFANA_API_KEY}" \
+          TIMESTAMP=$(date +%s000000000)
+          
+          if [ -f "trivy-results.json" ]; then
+            echo "Processing Trivy results..."
+            
+            # Count vulnerabilities
+            CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity == "CRITICAL")] | length' trivy-results.json || echo "0")
+            HIGH_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity == "HIGH")] | length' trivy-results.json || echo "0")
+            
+            SUMMARY="Trivy Scan: $CRITICAL_COUNT Critical, $HIGH_COUNT High vulnerabilities - Repo: $GITHUB_REPOSITORY"
+            
+            echo "Summary: $SUMMARY"
+            
+            # Create payload
+            PAYLOAD=$(cat << EOF
+{
+  "streams": [
+    {
+      "stream": {
+        "job": "security-scans",
+        "tool": "trivy",
+        "repository": "$GITHUB_REPOSITORY",
+        "branch": "$GITHUB_REF_NAME",
+        "commit": "$GITHUB_SHA"
+      },
+      "values": [
+        ["$TIMESTAMP", "$SUMMARY"]
+      ]
+    }
+  ]
+}
+EOF
+)
+            
+            echo "Sending to Grafana Cloud Loki..."
+            response=$(curl -s -w "HTTP_STATUS:%{http_code}" \
+              -u "$GRAFANA_USER_ID:$GRAFANA_API_KEY" \
               -H "Content-Type: application/json" \
-              -d @- "${GRAFANA_LOKI_URL}/loki/api/v1/push")
-
-            if [ "$response_code" = "204" ] || [ "$response_code" = "200" ]; then 
-              echo "✅ $tool results sent (HTTP $response_code)"
-            else 
-              echo "❌ Loki push failed (HTTP $response_code)"
+              -d "$PAYLOAD" \
+              "$GRAFANA_LOKI_URL/loki/api/v1/push")
+            
+            # Extract HTTP status
+            http_status=$(echo "$response" | grep -o 'HTTP_STATUS:[0-9]*' | cut -d: -f2)
+            
+            if [ "$http_status" = "204" ] || [ "$http_status" = "200" ]; then
+              echo "✅ Trivy results sent successfully (HTTP $http_status)"
+            else
+              echo "❌ Failed to send to Grafana Cloud (HTTP $http_status)"
+              echo "Response: $response"
             fi
-          }
-
-          push_to_loki "trivy" "trivy-results.json"
+            
+          else
+            echo "❌ trivy-results.json not found - cannot send to Grafana"
+          fi
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: "${DOCKERHUB_USERNAME}"
-          password: "${DOCKERHUB_TOKEN}"
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push Docker image
         if: success()
         run: |
-          docker push "${DOCKERHUB_USERNAME}/kali-test:${GITHUB_SHA}"
+          docker push "mariobh/kali-test:${{ github.sha }}"
 
