--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,53 @@
-curl -X POST "$LOKI_URL" \
-  -H "Content-Type: "https://logs-prod-012.grafana.net/loki/api/v1/push" \
-  -u "$GRAFANA_TENANT_ID:$GRAFANA_API_KEY" \
-  --data "$PAYLOAD"
+name: Deploy Grafana Dashboard
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      # 1️⃣ Checkout the repo
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # 2️⃣ Install Go
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.24.6
+
+      - name: Verify Go version
+        run: go version
+
+      # 3️⃣ Download grafanactl CLI
+      - name: Download and Extract grafanactl
+        run: |
+          curl -L -o grafanactl-x86_64.tar.gz "https://github.com/grafana/grafanactl/releases/download/${{ vars.GRAFANACTL_VERSION }}/grafanactl_Linux_x86_64.tar.gz"
+          tar -xzf grafanactl-x86_64.tar.gz
+          chmod +x grafanactl
+          sudo mv grafanactl /usr/local/bin/grafanactl
+
+      # 4️⃣ Generate the dashboard JSON
+      - name: Generate Dashboard JSON
+        run: go run main.go
+        working-directory: ./github-actions-example
+
+      # 5️⃣ Deploy to Grafana Cloud
+      - name: Deploy Dashboard with grafanactl
+        env:
+          GRAFANA_SERVER: ${{ vars.GRAFANA_SERVER }}
+          GRAFANA_STACK_ID: ${{ vars.GRAFANA_STACK_ID }}
+          GRAFANA_TOKEN: ${{ secrets.GRAFANA_TOKEN }}
+        run: |
+          if [ -f dashboard.json ]; then
+            echo "✅ dashboard.json found, deploying to Grafana Cloud..."
+            grafanactl resources push dashboards --path ./dashboard.json
+          else
+            echo "❌ dashboard.json not found."
+            exit 1
+          fi
+        working-directory: ./github-actions-example
